// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vanta test entries 1`] = `
Array [
  "Processed 1 records",
  "Processed records by stream: {\\\\\\"mytestsource__vanta__vulnerabilities\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 2 records",
  "Would write records by model: {\\\\\\"cicd_ArtifactVulnerability\\\\\\":1,\\\\\\"sec_Vulnerability\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`vanta test entries with duplicate UIDs 1`] = `
Array [
  "Processed 2 records",
  "Processed records by stream: {\\\\\\"mytestsource__vanta__vulnerabilities\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 2 records",
  "Would write records by model: {\\\\\\"cicd_ArtifactVulnerability\\\\\\":1,\\\\\\"sec_Vulnerability\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`vanta test no entries 1`] = `
Array [
  "Processed 2 records",
  "Processed records by stream: {\\\\\\"mytestsource__vanta__vulnerabilities\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 0 records",
  "Would write records by model: {}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;
